# recursive-runner

./: .classpath  .editorconfig  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  AUTHORS  AndroidManifest.xml  CMakeLists.txt  Config.xcconfig  LICENSE  README.md  THANKS  android_generate_signed_apk.sh  android_generate_test_signed_apk.sh  ant.properties  build.xml  emscripten.cmake  local.properties  project.properties  prototype.cproj  recursiveRunner.cproj  recursiveRunner.sln  recursiveRunner.sublime-project
.tx/: config
android/: Android.mk  AndroidManifest.xml  Application.mk  build.xml  project.properties  prototype.cpp  recursiveRunner.cpp
assets/: alphabet.atlas  alphabet.desc  alphabet.pkm  alphabet.pkm.00  alphabet.pvr  alphabet.pvr.00  arbre.atlas  arbre.desc  arbre.pkm  arbre.pkm.00  arbre.pkm.01  arbre.pvr  arbre.pvr.00  arbre.pvr.01  decor.atlas  decor.desc  decor.pkm  decor.pkm.00  decor.pkm.01  decor.pvr  decor.pvr.00  decor.pvr.01  decor.pvr.02  default.fs  default.vs  default_no_alpha.fs  default_vbo.vs  dummy.atlas  dummy.desc  dummy.pkm  dummy.pkm.00  dummy.pvr  dummy.pvr.00  empty.fs  fumee.atlas  fumee.desc  fumee.pkm  fumee.pkm.00  fumee.pvr  fumee.pvr.00  (+11 more)
assets/anim/: arrow_tuto.anim  disappear2.anim  fumee_end.anim  fumee_loop.anim  fumee_start.anim  jumpL2R_down.anim  jumpL2R_up.anim  jumptorunL2R.anim  piano.anim  piano2.anim  pianojournal.anim  runL2R.anim
assets/entities/: button.entity  camera.entity  coin.entity  collision_zone.entity  gain.entity  link.entity  logo.entity  logo_bg.entity  logo_fade.entity  runner.entity  transition_helper.entity
assets/hdpi/: UI.atlas  UI.dds.00  UI.dds.01  UI.pkm.00  UI.pkm.01  UI.pvr.00  UI.pvr.01  UI.pvr.02  UI_alpha.dds.00  UI_alpha.dds.01  UI_alpha.pkm.00  UI_alpha.pkm.01  UI_alpha.pvr.00  UI_alpha.pvr.01  alphabet.atlas  alphabet.pkm.00  arbre.atlas  arbre.dds.00  arbre.dds.01  arbre.pkm.00  arbre.pkm.01  arbre.pvr.00  arbre.pvr.01  arbre_alpha.dds.00  arbre_alpha.dds.01  arbre_alpha.pkm.00  arbre_alpha.pkm.01  arbre_alpha.pvr.00  arbre_alpha.pvr.01  bridge.pkm.00  church.pkm.00  debugfont.pkm.00  decor.atlas  decor.dds.00  decor.dds.01  decor.pkm.00  decor.pkm.01  decor.pvr.00  decor.pvr.01  decor.pvr.02  (+36 more)
assets/ldpi/: UI.atlas  UI.dds.00  UI.pkm.00  UI.pvr.00  UI_alpha.dds.00  UI_alpha.pkm.00  UI_alpha.pvr.00  alphabet.atlas  alphabet.pkm.00  arbre.atlas  arbre.dds.00  arbre.pkm.00  arbre_alpha.dds.00  arbre_alpha.pkm.00  bridge.pkm.00  church.pkm.00  debugfont.pkm.00  decor.atlas  decor.dds.00  decor.pkm.00  decor_alpha.dds.00  decor_alpha.pkm.00  dummy.atlas  dummy.pkm.00  farm.pkm.00  font.pkm.00  fumee.atlas  fumee.pkm.00  google_play_UI.atlas  google_play_UI.pkm.00  logo.atlas  logo.dds.00  logo.pkm.00  logo_alpha.dds.00  logo_alpha.pkm.00  menu.pkm.00  minimenu.pkm.00  mission_ui.pkm.00  patrol.pkm.00  rallypoint.pkm.00  (+3 more)
assets/mdpi/: UI.atlas  UI.dds.00  UI.pkm.00  UI.pvr.00  UI_alpha.dds.00  UI_alpha.pkm.00  UI_alpha.pvr.00  alphabet.atlas  alphabet.pkm.00  arbre.atlas  arbre.dds.00  arbre.pkm.00  arbre_alpha.dds.00  arbre_alpha.pkm.00  bridge.pkm.00  church.pkm.00  debugfont.pkm.00  decor.atlas  decor.dds.00  decor.pkm.00  decor_alpha.dds.00  decor_alpha.pkm.00  dummy.atlas  dummy.pkm.00  farm.pkm.00  font.pkm.00  fumee.atlas  fumee.pkm.00  google_play_UI.atlas  google_play_UI.pkm.00  logo.atlas  logo.dds.00  logo.pkm.00  logo_alpha.dds.00  logo_alpha.pkm.00  menu.pkm.00  minimenu.pkm.00  mission_ui.pkm.00  patrol.pkm.00  rallypoint.pkm.00  (+4 more)
assets/strings/: ca.txt  en.txt  es.txt  fa.txt  fr.txt  gl.txt  (+9 more)
assetspc/: selected.fs
linux/: CMakeLists.txt  prototype.cpp  recursiveRunner.cpp
sources/: CMakeLists.txt  DepthLayer.h  LogoStateManager.cpp  LogoStateManager.h  Parameters.h  PrototypeGame.cpp  PrototypeGame.h  RecursiveRunnerGame.cpp  RecursiveRunnerGame.h
sources/api/: RecursiveRunnerStorageAPI.h  StorageAPI.h
sources/api/android/: StorageAPIAndroidImpl.cpp  StorageAPIAndroidImpl.h
sources/api/linux/: Callback.cpp  Callback.h  StorageAPILinuxImpl.cpp  StorageAPILinuxImpl.h
sources/scenes/: AboutScene.cpp  GameScene.cpp  LogoScene.cpp  MenuScene.cpp  PauseScene.cpp  RateScene.cpp  RestartGameScene.cpp  Scenes.h  StatsScene.cpp  Tutorial.h  TutorialScene.cpp  TutorialScene.h
sources/states/: AboutScene.cpp  Ad.cpp  AdScene.cpp  AdStateManager.cpp  Game.cpp  GameScene.cpp  GameStateManager.cpp  Logo.cpp  LogoScene.cpp  LogoStateManager.cpp  Menu.cpp  MenuScene.cpp  MenuStateManager.cpp  Pause.cpp  PauseScene.cpp  PauseStateManager.cpp  Rate.cpp  RateScene.cpp  RateStateManager.cpp  RestartGame.cpp  RestartGameScene.cpp  RestartGameStateManager.cpp  Scenes.h  SocialCenter.cpp  StateManager.h  TransitionStateManager.cpp  Tutorial.cpp  Tutorial.h  TutorialStateManager.cpp
sources/states/tutorial/: AvoidYourself  AvoidYourself.h  BestScore  BigJump  BigJump.h  IntroduceHero  IntroduceHero.h  MeetYourself  MeetYourself.h  NewHero  NewHero.h  RunTilTheEdge  ScorePoints  ScorePoints.h  SmallJump  SmallJump.h  TheEnd  TheEnd.h  Title
sources/systems/: CameraTargetSystem.cpp  CameraTargetSystem.h  GameSystem.cpp  GameSystem.h  PlatformerSystem.cpp  PlatformerSystem.h  PlayerSystem.cpp  PlayerSystem.h  RangeFollowerSystem.cpp  RangeFollowerSystem.h  RunnerSystem.cpp  RunnerSystem.h  SessionSystem.cpp  SessionSystem.h
sources/util/: RecursiveRunnerDebugConsole.cpp  RecursiveRunnerDebugConsole.h  ScoreStorageProxy.cpp  ScoreStorageProxy.h  StatsStorageProxy.cpp  StatsStorageProxy.h  SuccessManager.cpp  SuccessManager.h
unprepared_assets/: generate_all_atlas.sh  generate_atlas.sh
(+204 files in other folders)
